gcc/testsuite/algol68/compile/error-nest-1.a68
begin int foo =
         nest XYZ { dg-error "valid language" }
         "foo";
      skip
end
